test/tests/fail/duplicates2.alan
main () : int
	a : int;
	b : int;
	res : int;
	add (x : int, y : int) : int
	{
		return x + y;
	}
	mul (x : int, y : int) : int
	{
		return x * y;
	}
	test (x : int, x : byte) : int	--sem error : duplicates
	{
		writeString("hi!");
		return 0;
	}
{
	a = 17;
	b = 2;
	res = add(mul(a, 2), add(mul(1, b), 6));
	return res;
}
